--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,6 +34,10 @@ h1 {
     min-width: 200px;
 }
 
+.deloitte {
+    border-radius: 5px;
+}
+
 /* @media (max-width: 400px) {
     .loevlaw {
         width: 50%;
